Adds the remaining data and adds the footer

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -36,3 +36,11 @@
     <% end %>
   </div>
 </section>
+<div class="row divider">
+  <img src="/images/divider.png" alt="">
+</div>
+<footer>
+    <p>
+        Created by <a href="bethmathews.com">bethmathews.com</a> &middot; Developed by Levi Kennedy
+    </p>
+</footer>
