--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -41,6 +41,6 @@
 </div>
 <footer>
     <p>
-        Created by <a href="bethmathews.com">bethmathews.com</a> &middot; Developed by Levi Kennedy
+        Created by <a href="https://www.bethmathews.com/about/">bethmathews.com</a> &middot; Developed by Levi Kennedy
     </p>
 </footer>
