--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -17,7 +17,7 @@
         </a>
       </h1>
       <h2 class="subheading">
-        Supporting our immigrant communty one bite at a time
+        Supporting our immigrant community one bite at a time
       </h2>
     </header>
     <div class="content">
